Fixed Grid problem on Mobile ver
Now all pages seems responsible on mobile

--- a/css/grid.css
+++ b/css/grid.css
@@ -1,6 +1,6 @@
 .wrapper{
 	width:clamp(17rem, 90vw, 75rem);
-	padding:0.5rem;
+	padding:0.3rem;
 	background-color: white;
 	margin:0 auto;
 	margin-top: 2rem;
@@ -9,7 +9,7 @@
 }
 
 .shop-wrapper{
-	/*width:clamp(17rem, 90vw, 75rem);*/
+	width:clamp(17rem, 90vw, 75rem);
 	padding:0.5rem;
 	background-color: white;
 	margin:0 auto;
@@ -269,9 +269,20 @@ input[id="review"]{
 	grid-column-end:5;
 }
 
+@media screen and (max-width:414px){
+.wrapper{
+	width:clamp(10rem, 80vw, 75rem);
+	padding: 0rem;
+	margin: 0rem;
+}
 
+.grid-container{
+	grid-column-gap:3.5rem;
+}
 
-@media screen and (max-width:58em){
+}
+
+@media screen and (max-width:833px){
 	.block-2-half{
 		grid-column:1/9;
 		grid-column-end: 9;
